--- a/App.xaml
+++ b/App.xaml
@@ -11,8 +11,10 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
                 <ResourceDictionary Source="Theme/TextBoxTheme.xaml"/>
+                <ResourceDictionary Source="Theme/IconButtonTheme.xaml"/>
+                <ResourceDictionary Source="Theme/ModernScrollViewerTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-
+            
             <DataTemplate DataType="{x:Type viewModel:PersonalViewModel}">
                 <view:PersonalView/>
             </DataTemplate>
