--- a/App.xaml
+++ b/App.xaml
@@ -22,7 +22,11 @@
             <DataTemplate DataType="{x:Type viewModel:StatusViewModel}">
                 <view:StatusView/>
             </DataTemplate>
-            
+
+            <DataTemplate DataType="{x:Type viewModel:SnackViewModel}">
+                <view:SnackView/>
+            </DataTemplate>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
