--- a/MVVM/View/PersonalView.xaml
+++ b/MVVM/View/PersonalView.xaml
@@ -7,37 +7,32 @@
              mc:Ignorable="d" 
              d:DesignHeight="130" d:DesignWidth="360">
     <ScrollViewer Style="{StaticResource ModernScrollViewerTheme}">
-        <StackPanel>
-            <TextBlock Text="Name Stuffs"
+        <StackPanel Margin="10">
+            <TextBlock Text="Given"
                    Foreground="White"
-                   FontSize="28"
-                   HorizontalAlignment="Center"
-                   Margin="0, 0, 0, 20"/>
-            <TextBlock Text="Name Stuffs"
+                   FontSize="15"
+                   Margin="0, 0, 0, 5"
+                   />
+            <TextBlock Text="Middle"
                    Foreground="White"
-                   FontSize="28"
-                   HorizontalAlignment="Center"
-                   Margin="0, 0, 0, 20"/>
-            <TextBlock Text="Name Stuffs"
+                   FontSize="15"
+                   Margin="0, 0, 0, 5"
+                   />
+            <TextBlock Text="Surname"
                    Foreground="White"
-                   FontSize="28"
-                   HorizontalAlignment="Center"
-                   Margin="0, 0, 0, 20"/>
-            <TextBlock Text="Name Stuffs"
+                   FontSize="15"
+                   Margin="0, 0, 0, 5"
+                   />
+            <TextBlock Text="School"
                    Foreground="White"
-                   FontSize="28"
-                   HorizontalAlignment="Center"
-                   Margin="0, 0, 0, 20"/>
-            <TextBlock Text="Name Stuffs"
+                   FontSize="15"
+                   Margin="0, 0, 0, 5"
+                   />
+            <TextBlock Text="Membership"
                    Foreground="White"
-                   FontSize="28"
-                   HorizontalAlignment="Center"
-                   Margin="0, 0, 0, 20"/>
-            <TextBlock Text="Name Stuffs"
-                   Foreground="White"
-                   FontSize="28"
-                   HorizontalAlignment="Center"
-                   Margin="0, 0, 0, 20"/>
+                   FontSize="15"
+                   Margin="0, 0, 0, 5"
+                   />
         </StackPanel>
     </ScrollViewer>
 </UserControl>
