--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -67,123 +67,10 @@
                         <ColumnDefinition/>
                         <ColumnDefinition Width="100"/>
                     </Grid.ColumnDefinitions>
-
-                    <Border Grid.Column="1"
-                            Margin="20"
-                            CornerRadius="10">
-                        <Border.Background>
-                            <LinearGradientBrush StartPoint="0, 0" EndPoint="0, 1">
-                                <GradientStop Color="#1c4942" Offset="0.0"/>
-                                <GradientStop Color="#23d5bb" Offset="2.0"/>
-                            </LinearGradientBrush>
-                        </Border.Background>
-                        <StackPanel>
-                            <StackPanel.Resources>
-                                <Style TargetType="{x:Type Border}">
-                                    <Setter Property="Margin" Value="8"/>
-                                </Style>
-                            </StackPanel.Resources>
-                            <StackPanel Orientation="Horizontal"
-                                        Background="#267367">
-                                <Border Width="105"
-                                        Height="30"
-                                        CornerRadius="7">
-                                    <Border.Background>
-                                        <LinearGradientBrush StartPoint="0, 0" EndPoint="1, 0">
-                                            <GradientStop Color="#134039" Offset="0.0"/>
-                                            <GradientStop Color="#0e1c1c" Offset="1.0"/>
-                                        </LinearGradientBrush>
-                                    </Border.Background>
-                                    <RadioButton Content="Personal"
-                                                 Foreground="White"
-                                                 FontSize="20"
-                                                 Style="{StaticResource MenuButtonTheme}"
-                                                 GroupName="CategoriesButton"
-                                                 IsChecked="True"
-                                                 Command="{Binding PersonalViewCommand}"/>
-                                </Border>
-
-                                <Border Width="105"
-                                        Height="30"
-                                        CornerRadius="7">
-                                    <Border.Background>
-                                        <LinearGradientBrush StartPoint="0, 0" EndPoint="1, 0">
-                                            <GradientStop Color="#134039" Offset="0.0"/>
-                                            <GradientStop Color="#0e1c1c" Offset="1.0"/>
-                                        </LinearGradientBrush>
-                                    </Border.Background>
-                                    <RadioButton Content="Status"
-                                                 Foreground="White"
-                                                 FontSize="20"
-                                                 Style="{StaticResource MenuButtonTheme}"
-                                                 GroupName="CategoriesButton"
-                                                 IsChecked="False"
-                                                 Command="{Binding StatusViewCommand}"/>
-                                </Border>
-
-                                <Border Width="105"
-                                        Height="30"
-                                        CornerRadius="7">
-                                    <Border.Background>
-                                        <LinearGradientBrush StartPoint="0, 0" EndPoint="1, 0">
-                                            <GradientStop Color="#134039" Offset="0.0"/>
-                                            <GradientStop Color="#0e1c1c" Offset="1.0"/>
-                                        </LinearGradientBrush>
-                                    </Border.Background>
-                                    <RadioButton Content="Snacks"
-                                                 Foreground="White"
-                                                 FontSize="20"
-                                                 Style="{StaticResource MenuButtonTheme}"
-                                                 GroupName="CategoriesButton"
-                                                 IsChecked="False"
-                                                 Command="{Binding SnackViewCommand}"/>
-                                </Border>
-                            </StackPanel>
-                            <StackPanel Background="#37a695">
-                                <Grid Height="185">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="145"/>
-                                        <RowDefinition/>
-                                    </Grid.RowDefinitions>
-
-
-                                    <Border Grid.Row="0"
-                                            Margin="15, 10, 15, 15"
-                                            Background="#267367"
-                                            CornerRadius="10">
-                                        <ContentControl Content="{Binding CurrentView}">
-
-                                        </ContentControl>
-                                    </Border>
-
-                                    <Border Grid.Row="1"
-                                            Background="#267367"
-                                            Margin="0"
-                                            CornerRadius="10"
-                                            Width="330">
-                                        <TextBox Width="250"
-                                                 VerticalAlignment="Center"
-                                                 HorizontalAlignment="Center"
-                                                 Grid.Column="1"
-                                                 Style="{StaticResource ModernTextBox}"/>
-                                    </Border>
-                                </Grid>
-                            </StackPanel>
-
-                        </StackPanel>
-
-                    </Border>
-
+                    <StackPanel x:Name="MainGrid" Grid.Column="1">
+                        <TextBlock Name="Test" Text="Hello" FontSize="35" Grid.Column="1"/>
+                    </StackPanel>
                 </Grid>
-                <Button Style="{StaticResource ExportButton}"
-                        Grid.Row="1"
-                        RenderTransformOrigin="0.4,0.067" 
-                        Margin="418,216,150,29"/>
-                <Button Style="{StaticResource ImportButton}"
-                        Grid.Row="1"
-                        RenderTransformOrigin="0.4,0.067" 
-                        Margin="151,216,419,29">
-                </Button>
             </Grid>
         </Grid>
     </Border>
